--- a/chess2/styles.css
+++ b/chess2/styles.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    background-color: #28282B;
 }
 
 #GameBoard {
@@ -14,5 +15,5 @@
 }
 
 canvas {
-    border: 1px solid black;
+    border: 5px solid black;
 }
